Fixed an issue with missing Fetch fields
